[tool.poetry]
name = "example_python"
version = "0.1.0"
description = ""
authors = ["So1n <qaz6803609@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyinotify = "^0.9.6"
uvicorn = "^0.13.3"
starlette = "^0.14.1"
pydantic = "^1.7.3"
aiomysql = "^0.0.21"
cryptography = "^3.3.1"
aioredis = "^1.3.1"
kombu = "^5.0.2"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinotify = "^0.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
