[tool.poetry]
name = "grpc_example"
version = "0.1.0"
description = ""
authors = ["so1n <qaz6803609@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.39.0"
grpcio-tools = "^1.39.0"
prometheus-client = "^0.11.0"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
