[tool.poetry]
name = "grpc_example_server"
version = "0.1.0"
description = ""
authors = ["so1n <qaz6803609@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.39.0"
grpcio-tools = "^1.39.0"
prometheus-client = "^0.11.0"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
gevent = "^21.1.2"
Faker = "^8.5.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
mypy = "^0.812"
pytest = "^6.2.4"
isort = "^5.8.0"
pytest-mock = "^3.6.1"
coverage = "^5.5"
mypy-protobuf = "^2.5"
pytest-grpc = "^0.8.0"


[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest]
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    # 屏蔽虚拟环境
    ".venv/*",  "venv/*",
    # 屏蔽测试代码
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # type hints
    "if TYPE_CHECKING:",
    "pass",
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
